# permutations-perrry

./: Setup.lhs  permutation.cabal
Data/: Permutation.hs
Data/Permute/: IO.hs  Internal.hs  MPermute.hs  ST.hs
System/Random/: Permutation.hs
examples/: Enumerate.hs
lib/Data/: Choose.hs  IntArray.hs  Permute.hs
lib/Data/Choose/: Base.hs  IO.hs  IOBase.hs  MChoose.hs  ST.hs
lib/Data/Permute/: Base.hs  IO.hs  IOBase.hs  Internal.hs  MPermute.hs  ST.hs
lib/Data/Permute/MPermute/: Base.hs
lib/Test/: Permute.hs
tests/: Choose.hs  Driver.hs  Impure.hs  Main.hs  Makefile  Permute.hs  Pure.hs  ST.hs  STChoose.hs  STPermute.hs  Unit.hs
tests/Test/: Choose.hs  Permute.hs
