name:            permutation
version:         0.1
homepage:        http://stat.stanford.edu/~patperry/code/permutation
synopsis:        Permutations and combinations
description:
    A library for representing and applying permutations and combinations.
    Also includes facility for generating random permutations and shuffles
    using the GenT monad transformer from the random-gen library.
    .
category:        Math
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2008. Patrick Perry <patperry@stanford.edu>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@stanford.edu>
cabal-version: >= 1.2.0
build-type:      Custom
tested-with:     GHC ==6.8.2

extra-source-files:  tests/Unit.hs
                     tests/Makefile

library
    exposed-modules: Data.Permutation
                     System.Random.Permutation

    build-depends:   base, containers, random-gen, mtl

    ghc-options:     -Wall
