name:            permutation
version:         0.2
homepage:        http://stat.stanford.edu/~patperry/code/permutation
synopsis:        Permutations and combinations
description:
    A library for representing and applying permutations.
    .
category:        Math
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2008. Patrick Perry <patperry@stanford.edu>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@stanford.edu>
cabal-version: >= 1.2.0
build-type:      Custom
tested-with:     GHC ==6.8.2

extra-source-files:  tests/Unit.hs
                     tests/Makefile

library
    exposed-modules: Data.Permute
                     Data.Permute.MPermute
                     Data.Permute.IO
                     Data.Permute.ST
                     
    other-modules:   Data.Permute.Internal

    build-depends:   base, containers, array
    extensions:      MultiParamTypeClasses, TypeFamilies, FlexibleContexts,
                     Rank2Types

    ghc-options:     -Wall
