name:            permutation
version:         0.2
homepage:        http://stat.stanford.edu/~patperry/code/permutation
synopsis:        Permutations and combinations
description:
    A library for representing and applying permutations.
    .
category:        Math
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2008. Patrick Perry <patperry@stanford.edu>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@stanford.edu>
cabal-version: >= 1.2.0
build-type:      Custom
tested-with:     GHC ==6.10.1

extra-source-files:  examples/Enumerate.hs
                     tests/Driver.hs
                     tests/Main.hs
                     tests/Pure.hs
                     tests/ST.hs
                     tests/Makefile

library
    hs-source-dirs:  lib
    exposed-modules: Data.Permute
                     Data.Permute.Base
                     Data.Permute.IOBase
                     Data.Permute.MPermute
                     Data.Permute.MPermute.Base
                     Data.Permute.IO
                     Data.Permute.ST
                     Test.Permute
                     
    other-modules:   Data.IntArray
                     

    build-depends:   base, ghc-prim, QuickCheck < 2
    extensions:      MultiParamTypeClasses, FunctionalDependencies, 
                     FlexibleContexts, Rank2Types, BangPatterns, CPP

    ghc-options:     -Wall
